--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Articles</h1>
-
-
+<a href="https://github.com/vkrinitsyn/vkrinitsyn.github.io?tab=readme-ov-file#articles" >
+    <h1>Articles</h1>
+</a>
