link do diff-doc

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta http-equiv="refresh" content="0; url=https://github.com/vkrinitsyn/vkrinitsyn.github.io?tab=readme-ov-file#articles/" />
 <a href="https://github.com/vkrinitsyn/vkrinitsyn.github.io?tab=readme-ov-file#articles" >
     <h1>Articles</h1>
 </a>
